- Implement add to cart api - implement Get Cart details api

--- a/app/src/main/res/layout/fragment_recommended.xml
+++ b/app/src/main/res/layout/fragment_recommended.xml
@@ -173,7 +173,7 @@
                     tools:listitem="@layout/row_amc_list_item" />
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/btnGetThisGoal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/space_8"
