--- a/app/src/main/res/layout/row_cart_item.xml
+++ b/app/src/main/res/layout/row_cart_item.xml
@@ -64,6 +64,7 @@
             android:layout_marginTop="@dimen/default_space"
             android:text="@string/new_"
             android:textColor="@color/semi_white"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.33"
             app:layout_constraintStart_toStartOf="parent"
@@ -78,6 +79,7 @@
             android:fontFamily="@font/lato_semibold"
             android:text="Folio"
             android:textColor="@color/white"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tvNewLbl"
             app:layout_constraintTop_toBottomOf="@+id/tvName"
@@ -202,8 +204,8 @@
             android:layout_marginStart="@dimen/space_8"
             android:background="@drawable/shape_edt_white_round"
             android:gravity="center"
-            android:visibility="@{fund.hasOneTimeAmount ? View.VISIBLE: View.INVISIBLE}"
             android:orientation="horizontal"
+            android:visibility="@{fund.hasOneTimeAmount ? View.VISIBLE: View.INVISIBLE}"
             app:layout_constraintBottom_toBottomOf="@+id/tvLumpsum"
             app:layout_constraintStart_toEndOf="@id/tvLumpsum"
             app:layout_constraintTop_toTopOf="@+id/tvLumpsum">
