--- a/app/src/main/res/layout/row_cart_item.xml
+++ b/app/src/main/res/layout/row_cart_item.xml
@@ -130,6 +130,7 @@
                 android:layout_height="0dp"
                 android:background="@null"
                 android:fontFamily="@font/lato_semibold"
+                android:imeOptions="actionDone"
                 android:inputType="number"
                 android:maxLines="1"
                 android:text="@{fund.sipAmount+``}"
@@ -228,6 +229,7 @@
                 android:layout_height="0dp"
                 android:background="@null"
                 android:fontFamily="@font/lato_semibold"
+                android:imeOptions="actionDone"
                 android:inputType="number"
                 android:maxLines="1"
                 android:minWidth="100dp"
