Api implemented for Fund Overview Screen.

--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -54,7 +54,7 @@
                     android:id="@+id/tvCurrentL"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0.43 (1.10%)"
+                    android:text="@{fund.currentReturn}"
                     android:textSize="@dimen/sp9"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -68,7 +68,7 @@
                     android:drawableEnd="@{fund.hasNegativeReturn? @drawable/ic_arrow_downward_red_24dp:@drawable/ic_arrow_upward_green}"
                     android:drawablePadding="@dimen/space_2"
                     android:fontFamily="@font/lato_semibold"
-                    android:text="39.550"
+                    android:text="@{fund.nav}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@android:color/black"
                     app:layout_constraintBaseline_toBaselineOf="@+id/tvCurrentL"
