- Implement Delete and update cart api

--- a/app/src/main/res/layout/row_cart_item.xml
+++ b/app/src/main/res/layout/row_cart_item.xml
@@ -133,7 +133,7 @@
                 android:imeOptions="actionDone"
                 android:inputType="number"
                 android:maxLines="1"
-                android:text="@{fund.sipAmount+``}"
+                android:text="@={fund.sipAmount}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@color/white"
                 app:isPositiveCurrency="@{true}"
@@ -155,7 +155,7 @@
             android:drawableEnd="@drawable/ic_drop_down_white_24dp"
             android:fontFamily="@font/lato_semibold"
             android:padding="@dimen/space_8"
-            android:text="@{fund.date}"
+            android:text="@={fund.date}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/llSIP"
@@ -233,7 +233,7 @@
                 android:inputType="number"
                 android:maxLines="1"
                 android:minWidth="100dp"
-                android:text="@{fund.lumpsumAmount+``}"
+                android:text="@={fund.lumpsumAmount}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@color/white"
                 app:isPositiveCurrency="@{true}"
