--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -85,7 +85,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/space_8"
                     android:text="@{@string/nav_on + ` ` + fund.NAVDate ?? ``}"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textSize="@dimen/_9ssp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvCurrentL"
@@ -190,7 +190,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_8"
                     android:layout_marginBottom="@dimen/space_8"
-                    android:text="@{fund.investmentStrategy}"
+                    android:text="@{fund.fundObjective}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     tools:text="@string/fund_objective_info" />
 
