--- a/app/src/main/res/layout/fragment_performance.xml
+++ b/app/src/main/res/layout/fragment_performance.xml
@@ -82,7 +82,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/space_8"
                     android:text="@{@string/nav_on + ` ` + fund.NAVDate ?? ``}"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textSize="@dimen/_9ssp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvCurrentL"
@@ -95,6 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_space"
                 android:background="@drawable/shape_cart_view"
+                android:visibility="gone"
                 android:elevation="@dimen/space_2"
                 android:padding="8dp">
 
@@ -211,11 +212,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/space_8"
                     android:layout_marginEnd="@dimen/space_8"
-                    android:text="(NAV on 16 Aug, 2018)"
+                    android:text="@{`(`+@string/nav_on + ` ` + fund.NAVDate + `)`}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintBaseline_toBaselineOf="@id/tvReturn"
                     app:layout_constraintEnd_toStartOf="@id/tvReturnP"
-                    app:layout_constraintStart_toEndOf="@id/tvReturn" />
+                    app:layout_constraintStart_toEndOf="@id/tvReturn"
+                    tools:text="(NAV on 16 Aug, 2018)" />
 
                 <TextView
                     android:id="@+id/tvReturnP"
