- Investment add to card added - Date update modification in card

--- a/app/src/main/res/layout/fragment_performance.xml
+++ b/app/src/main/res/layout/fragment_performance.xml
@@ -399,7 +399,7 @@
             </android.support.constraint.ConstraintLayout>
 
             <Button
-                android:id="@+id/btnIdle"
+                android:id="@+id/btn_invest_now"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_space"
