--- a/app/src/main/res/layout/dialog_invest_goal.xml
+++ b/app/src/main/res/layout/dialog_invest_goal.xml
@@ -11,6 +11,10 @@
         <variable
             name="lumpsum"
             type="String" />
+
+        <variable
+            name="durations"
+            type="String" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -129,6 +133,41 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvSIPAmountL" />
 
+
+        <TextView
+            android:id="@+id/tvDurationsL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_space"
+            android:text="@string/sip_duration"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edtSIPAmount" />
+
+        <EditText
+            android:id="@+id/edtDurations"
+            maxValue="@{99}"
+            minValue="@{1}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_4"
+            android:background="@drawable/shape_edt_gray_round"
+            android:hint="@string/enter_sip_duration"
+            android:inputType="numberDecimal"
+            android:maxLines="1"
+            android:paddingStart="@dimen/default_space"
+            android:paddingTop="@dimen/space_8"
+            android:paddingEnd="@dimen/default_space"
+            android:paddingBottom="@dimen/space_8"
+            android:text="@={durations}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="@color/black"
+            android:textColorHint="@color/darker_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvDurationsL" />
+
         <Button
             android:id="@+id/btnInvest"
             android:layout_width="wrap_content"
@@ -144,7 +183,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edtSIPAmount" />
+            app:layout_constraintTop_toBottomOf="@id/edtDurations" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
