--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -69,6 +69,8 @@
             </LinearLayout>
 
             <android.support.constraint.ConstraintLayout
+                android:id="@+id/lyt_orders"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_space"
@@ -162,7 +164,6 @@
                     app:layout_constraintTop_toBottomOf="@+id/rvCartItems" />
 
             </android.support.constraint.ConstraintLayout>
-
 
         </LinearLayout>
 
