--- a/app/src/main/res/layout/row_cart_item.xml
+++ b/app/src/main/res/layout/row_cart_item.xml
@@ -11,6 +11,10 @@
             name="fund"
             type="com.tarrakki.api.model.CartData.Data.OrderLine" />
 
+        <variable
+            name="date"
+            type="String"/>
+
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -155,7 +159,7 @@
             android:drawableEnd="@drawable/ic_drop_down_white_24dp"
             android:fontFamily="@font/lato_semibold"
             android:padding="@dimen/space_8"
-            android:text="@={fund.date}"
+            android:text="@{date}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/llSIP"
