--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -34,6 +35,7 @@
                 android:paddingEnd="@dimen/default_space"
                 android:paddingBottom="@dimen/space_8"
                 android:text="@={vm.currentPassword}"
+                android:imeOptions="actionNext"
                 android:textColor="@color/black"
                 android:textColorHint="@color/darker_gray" />
 
@@ -53,6 +55,7 @@
                 android:text="@={vm.newPassword}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@color/black"
+                android:imeOptions="actionNext"
                 android:textColorHint="@color/darker_gray" />
 
             <EditText
@@ -67,6 +70,7 @@
                 android:paddingStart="@dimen/default_space"
                 android:paddingTop="@dimen/space_8"
                 android:paddingEnd="@dimen/default_space"
+                android:imeOptions="actionDone"
                 android:paddingBottom="@dimen/space_8"
                 android:text="@={vm.confirmPassword}"
                 android:textColor="@color/black"
