- change password api added - changes invest dialog

--- a/app/src/main/res/layout/dialog_invest.xml
+++ b/app/src/main/res/layout/dialog_invest.xml
@@ -116,11 +116,11 @@
             android:hint="@string/enter_sip_amount"
             android:inputType="number"
             android:maxLines="1"
-            android:nextFocusForward="@+id/edtDurations"
             android:paddingStart="@dimen/_24sdp"
             android:paddingTop="@dimen/space_8"
             android:paddingEnd="@dimen/default_space"
             android:paddingBottom="@dimen/space_8"
+            android:imeOptions="actionDone"
             android:text="@={investment}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/black"
