--- a/app/src/main/res/layout/row_investment_strategies_item.xml
+++ b/app/src/main/res/layout/row_investment_strategies_item.xml
@@ -7,7 +7,8 @@
 
         <variable
             name="widget"
-            type="com.tarrakki.module.investmentstrategies.InvestmentStrategy" />
+            type="com.tarrakki.api.model.HomeData.Data.Category.SecondLevelCategory" />
+
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -20,11 +21,11 @@
 
         <ImageView
             android:id="@+id/ivItem"
+            imgUrl="@{widget.categoryImage}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_8"
             android:adjustViewBounds="true"
-            app:imgUrl="@{widget.imgUrl}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -38,7 +39,7 @@
             android:gravity="center_vertical"
             android:maxLines="2"
             android:minLines="2"
-            android:text="@{widget.title}"
+            android:text="@{widget.categoryName}"
             android:textColor="@color/semi_black"
             android:textSize="@dimen/sp10"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +52,7 @@
             android:layout_height="wrap_content"
             android:maxLines="2"
             android:minLines="2"
-            android:text="@{widget.description}"
+            android:text="@{widget.categoryDesctiption}"
             android:textSize="@dimen/sp9"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle"
