- Category module Integration

--- a/app/src/main/res/layout/dialog_invest_stratergy.xml
+++ b/app/src/main/res/layout/dialog_invest_stratergy.xml
@@ -141,18 +141,20 @@
             android:layout_marginTop="@dimen/default_space"
             android:text="@string/sip_duration"
             android:textAllCaps="true"
+            android:visibility="gone"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edtSIPAmount" />
 
         <EditText
+            android:visibility="gone"
             android:id="@+id/edtDurations"
             maxValue="@{99}"
             minValue="@{1}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_4"
-            android:background="@drawable/shape_edt_gray_round"
+            android:background="@drawable/shape_edt_disable_gray_round"
             android:hint="@string/enter_sip_duration"
             android:inputType="numberDecimal"
             android:maxLines="1"
@@ -161,6 +163,7 @@
             android:imeOptions="actionDone"
             android:paddingEnd="@dimen/default_space"
             android:paddingBottom="@dimen/space_8"
+            android:focusable="false"
             android:text="@={durations}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/black"
