--- a/app/src/main/res/layout/page_investment_options_item.xml
+++ b/app/src/main/res/layout/page_investment_options_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="invest"
-            type="com.tarrakki.module.investmentstrategies.InvestmentOption" />
+            type="com.tarrakki.api.model.HomeData.Data.Category.SecondLevelCategory.ThirdLevelCategory" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -45,6 +45,7 @@
             android:id="@+id/view2"
             android:layout_width="144dp"
             android:layout_height="144dp"
+            app:cardBackgroundColor="@color/circular_bg"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/default_space"
             android:elevation="12dp"
@@ -54,8 +55,9 @@
 
             <ImageView
                 android:id="@+id/imageView1"
-                imgUrl="@{invest.imgRes}"
+                imgUrl="@{invest.categoryImage}"
                 android:layout_width="match_parent"
+                android:adjustViewBounds="true"
                 android:layout_height="match_parent"
                 tools:src="@drawable/ic_aggressive" />
 
@@ -70,7 +72,7 @@
                 android:minLines="2"
                 android:paddingStart="@dimen/space_5"
                 android:paddingEnd="@dimen/space_5"
-                android:text="@{invest.title}"
+                android:text="@{invest.categoryName}"
                 android:textAllCaps="true"
                 android:textColor="@color/semi_black"
                 android:textSize="@dimen/sp10"
@@ -86,40 +88,38 @@
             android:layout_marginTop="@dimen/default_space"
             android:layout_marginEnd="@dimen/space_8"
             android:background="@drawable/shape_risk_level_bg"
-            android:drawableStart="@{invest.riskLevelIMGRes}"
             android:drawablePadding="@dimen/space_8"
             android:fontFamily="@font/lato_semibold"
             android:gravity="center_vertical"
             android:minWidth="120dp"
-            android:padding="@dimen/space_8"
             android:text="@{invest.riskLevel}"
+            android:visibility="@{invest.riskLevelVisible}"
+            android:padding="@dimen/space_8"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/name_aggressive"
             app:layout_constraintEnd_toStartOf="@id/glCenter"
             app:layout_constraintTop_toBottomOf="@id/view2"
-            tools:drawableStart="@drawable/ic_red_up"
             tools:text="High Risk" />
 
         <TextView
             android:id="@+id/tvReturnLevel"
             android:layout_width="wrap_content"
+            android:visibility="@{invest.returnRiskVisible}"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_8"
             android:layout_marginTop="@dimen/default_space"
             android:layout_marginEnd="@dimen/space_8"
             android:background="@drawable/shape_risk_to_revord_level_bg"
-            android:drawableStart="@{invest.returnOnRiskLevelIMGRes}"
             android:drawablePadding="@dimen/space_8"
             android:fontFamily="@font/lato_semibold"
             android:gravity="center_vertical"
             android:minWidth="120dp"
+            android:text="@{invest.returnRisk}"
             android:padding="@dimen/space_8"
-            android:text="@{invest.returnOnRiskLevel}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/pdlg_color_green"
             app:layout_constraintStart_toStartOf="@id/glCenter"
             app:layout_constraintTop_toBottomOf="@id/view2"
-            tools:drawableStart="@drawable/ic_green_up"
             tools:text="High Return" />
 
         <android.support.constraint.Guideline
@@ -143,7 +143,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_space"
             android:lineSpacingExtra="@dimen/space_4"
-            android:text="@{invest.sortDescription}"
+            HTML="@{invest.shortDescroption}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintTop_toBottomOf="@id/mDivider"
             tools:text="An aggressive investment strategy involves allocating more money to direct equity, and less money to bonds." />
@@ -152,6 +152,7 @@
             android:id="@+id/tvDescriptionTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_marginTop="@dimen/default_space"
             android:lineSpacingExtra="@dimen/space_4"
             android:text="@string/opt_for_this_if"
@@ -164,7 +165,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_space"
             android:lineSpacingExtra="@dimen/space_4"
-            android:text="@{invest.descriptions}"
+            HTML="@{invest.categoryDesctiption}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintTop_toBottomOf="@id/tvDescriptionTitle"
             tools:text="An aggressive investment strategy involves allocating more money to direct equity, and less money to bonds." />
