--- a/app/src/main/res/layout/row_amc_list_item.xml
+++ b/app/src/main/res/layout/row_amc_list_item.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="amc"
-            type="com.tarrakki.module.recommended.AMC" />
+            name="vm"
+            type="com.tarrakki.api.model.InvestmentRecommendFundResponse.Data" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -25,7 +25,7 @@
             android:layout_marginEnd="@dimen/space_8"
             android:fontFamily="@font/lato_semibold"
             android:maxLines="2"
-            android:text="@{amc.name}"
+            android:text="@{vm.name}"
             android:textColor="@color/semi_black"
             app:layout_constraintEnd_toStartOf="@id/tvWeightageLabel"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_semibold"
             android:padding="@dimen/space_4"
-            android:text="@{amc.weightage + `%`}"
+            android:text="@{vm.weightage + `%`}"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tvWeightageLabel"
@@ -60,8 +60,8 @@
             android:gravity="center_vertical"
             android:maxLines="2"
             android:minLines="2"
-            android:text="@{amc.description}"
-            android:textColor="@{context.getColor(amc.fundColor)}"
+            android:text="@{vm.fscbiCategoryName}"
+            android:textColor="@{context.getColor(vm.fundColor)}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvWeightage"
             tools:text="Equity - India Multi Cap Equity"
@@ -73,13 +73,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_space"
             android:layout_marginEnd="8dp"
+            app:price="@{vm.sipAmount}"
             android:fontFamily="@font/lato_semibold"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/black"
             app:layout_constraintEnd_toStartOf="@+id/gdlCenter"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvDescription"
-            app:price="@{amc.oneTime}"
             tools:text="@string/dummy" />
 
         <TextView
@@ -114,7 +114,7 @@
             app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
             app:layout_constraintStart_toStartOf="@+id/gdlCenter"
             app:layout_constraintTop_toBottomOf="@id/tvDescription"
-            app:price="@{amc.monthly}"
+            app:price="@{vm.lumpsum}"
             tools:text="@string/dummy1" />
 
         <TextView
@@ -143,7 +143,7 @@
             android:layout_marginTop="@dimen/default_space"
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/lato_semibold"
-            android:text="@{amc.returns + `%`}"
+            android:text="@{vm.returns}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@+id/gdlEnd"
@@ -155,12 +155,11 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/lato_semibold"
-            android:text="@{@string/returns + ` (`+ amc.returnsSince +`)`}"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="@+id/gdlEnd"
             app:layout_constraintTop_toBottomOf="@id/tvOneTime"
-            tools:text="Returns (Last 5Y)" />
+            android:text="Returns (Last 5Y)" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
