--- a/app/src/main/res/layout/row_bank_account_list_item.xml
+++ b/app/src/main/res/layout/row_bank_account_list_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="widget"
-            type="com.tarrakki.module.bankaccount.Bank" />
+            type="com.tarrakki.api.model.BankDetail" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -36,7 +36,7 @@
             android:layout_marginEnd="4dp"
             android:fontFamily="@font/lato_semibold"
             android:maxLines="1"
-            android:text="@{widget.name}"
+            android:text="@{widget.branchBankIdBankName}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/item_selected_color"
             app:layout_constraintBottom_toBottomOf="@id/ivBank"
@@ -58,6 +58,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/white"
             android:textSize="@dimen/sp10"
+            android:visibility="@{widget.isDefaultVisivibility()}"
             app:layout_constraintBottom_toBottomOf="@+id/ivBank"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/ivBank" />
@@ -107,9 +108,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_semibold"
-            android:text="@{widget.breachName}"
+            android:text="@{widget.branchBranchName}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/semi_black"
+            android:maxLength="15"
             app:layout_constraintStart_toStartOf="@id/tvBreachNameL"
             app:layout_constraintTop_toBottomOf="@+id/tvBreachNameL"
             tools:text="Ahmedabad" />
@@ -132,7 +134,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_semibold"
             android:minWidth="80dp"
-            android:text="@{widget.IFSCCode}"
+            android:text="@{widget.branchIfscCode}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/semi_black"
             app:layout_constraintEnd_toEndOf="parent"
