--- a/app/src/main/res/layout/page_investment_options_item.xml
+++ b/app/src/main/res/layout/page_investment_options_item.xml
@@ -65,7 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:layout_marginBottom="24dp"
+                android:layout_marginBottom="@dimen/space_16"
                 android:fontFamily="@font/lato_bold"
                 android:gravity="center"
                 android:maxLines="2"
