- Thematic Investment added

--- a/app/src/main/res/layout/dialog_invest_stratergy.xml
+++ b/app/src/main/res/layout/dialog_invest_stratergy.xml
@@ -124,6 +124,7 @@
             android:paddingStart="@dimen/_24sdp"
             android:paddingTop="@dimen/space_8"
             android:paddingEnd="@dimen/default_space"
+            android:imeOptions="actionDone"
             android:paddingBottom="@dimen/space_8"
             android:text="@={investment}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
