--- a/app/src/main/res/layout/page_investment_options_item.xml
+++ b/app/src/main/res/layout/page_investment_options_item.xml
@@ -143,7 +143,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_space"
             android:lineSpacingExtra="@dimen/space_4"
-            HTML="@{invest.shortDescroption}"
+            android:text="@{invest.shortDescroption}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintTop_toBottomOf="@id/mDivider"
             tools:text="An aggressive investment strategy involves allocating more money to direct equity, and less money to bonds." />
@@ -165,7 +165,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_space"
             android:lineSpacingExtra="@dimen/space_4"
-            HTML="@{invest.categoryDesctiption}"
+            android:text="@{invest.categoryDesctiption}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintTop_toBottomOf="@id/tvDescriptionTitle"
             tools:text="An aggressive investment strategy involves allocating more money to direct equity, and less money to bonds." />
